--- a/style/index.css
+++ b/style/index.css
@@ -66,9 +66,6 @@ h1 {
     justify-content: space-evenly;
 }
 
-.avi {
-    padding-left: 2%;
-}
 
 .bio-div {
     width: 50%;
@@ -87,11 +84,11 @@ h2 {
     width: 25%;
 }
 
-p {
+.bio-text {
     font-size: 2rem;
 }
 
-/* Use flex box on project pictures */
+/* Style project photos sections */
 
 .images-box {
     display: flex;
@@ -103,11 +100,11 @@ p {
 
 figure {
     margin: 1% 0%;
-    text-align: center;
 }
 
 figcaption {
     font-size: 1.75rem;
+    text-align: center;
     margin-top: 1.5%;
 }
 
@@ -121,11 +118,16 @@ figcaption {
 footer {
     margin-top: 4%;
     padding: 2% 0%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-#footer-text {
+.footer-text {
     color: white;
     text-align: center;
+    font-size: 2.5rem;
 }
 
 footer .nav-button {
@@ -134,8 +136,8 @@ footer .nav-button {
     margin: 1% 42.5%;
 }
 
-#footer-flex {
-    margin: 0% 42.5%;
+.footer-flex {
+    margin: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -144,4 +146,50 @@ footer .nav-button {
 .icon {
     width: 35px;
     height: 35px;
+    margin: 10px;
+}
+
+@media (max-width: 800px){
+    
+    h1 {
+        text-align: center;
+    }
+
+    header nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    header .nav-button {
+        width: 10rem;
+        letter-spacing: normal;
+    }
+
+    .bio-div {
+        margin-top: 7.5%;
+    }
+    .bio-div .nav-button {        
+        padding: 2% 0;
+        margin: 2% 0%;
+        width: 12rem;
+        letter-spacing: normal;
+    }
+
+    .bio-text {
+        font-size: 1.75rem;
+    }
+
+    footer .nav-button {
+        width: 15rem;
+    }
+
+    .footer-flex {
+        justify-content: space-between;
+    }
+
+    .icon {
+        margin: 5px;
+    }
+
 }
